chore: make clear why (and for what) add-opens are necessary