@@ -62,10 +62,15 @@ application {
     // mainClassName = "com.example.hellofx.Launcher"
     // applicationName = 'hello-fx'
     applicationDefaultJvmArgs =  [
+            // necessary for ControlsFX
             "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
             "--add-opens=javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
             "--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
             // XXX many more necessary depending on control
+
+            // necessary for Jasperreports XML parsing
+            // https://github.com/TIBCOSoftware/jasperreports/issues/61
+            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED",
     ]
 }
 
